--- a/src/app/components/book-detail-component/book-detail.component.html
+++ b/src/app/components/book-detail-component/book-detail.component.html
@@ -1,22 +1,21 @@
 <app-card>
-@if(book){
-<div class="content">
-  
-  <div class="left">
-    <img [src]="book.cover_image" />
-  </div>
-  <div class="right">
-    <div class="title">
-      <h2 align="center">{{ book.title }}</h2>
-      <span align="center">By {{ book.author }}</span>
+  @if(book){
+  <div class="content">
+    <div class="left">
+      <img [src]="book.cover_image" />
     </div>
-    
-    <p>Description : {{ book.description }}</p>
-    <p>Author : {{ book.author }}</p>
-    <p>Publication Year : {{ book.publication_year }}</p>
-    <p>Genre : {{ book.genre }}</p>
-    
+    <div class="right">
+      <div class="title">
+        <h2 align="center">{{ book.title }}</h2>
+        <span align="center">By {{ book.author }}</span>
+      </div>
+      <ul type="none">
+        <li>Description : {{ book.description }}</li>
+        <li>Author : {{ book.author }}</li>
+        <li>Publication Year : {{ book.publication_year }}</li>
+        <li>Genre : {{ book.genre }}</li>
+      </ul>
+    </div>
   </div>
-</div>
-}
+  }
 </app-card>
