--- a/src/app/components/shared/card/card.component.css
+++ b/src/app/components/shared/card/card.component.css
@@ -1,4 +1,8 @@
 div {
     border-radius: 10px;
     box-shadow: 0 3px 9px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
   }
