--- a/src/app/components/book-list-component/book-list.component.html
+++ b/src/app/components/book-list-component/book-list.component.html
@@ -5,7 +5,7 @@
     <div class="card-body">
       <h5 class="card-title">{{ book.title }}</h5>
       <p class="card-text">By {{ book.author }}</p>
-      <a (click)="OpenDetails(book.id)" class="btn btn-primary">For Details</a>
+      <a (click)="OpenDetails(book.id)" class="btn">For Details</a>
     </div>
   </div>
   }
