--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -2,12 +2,13 @@
     position: sticky;
     top: 0;
     z-index: 1;
-    background-color:white;
+    background-color:#7b006b;
+    height: 13vh;
     padding: 10px;
     border-bottom: 1px solid #ddd;
   }
   .title{
-    color: #0d6efd;
+    color: white;
   }
   
   
