--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,8 @@
 <div class="sticky-header">
   <div class="row align-items-center mb-3">
-    <div class="col-12 col-md-6 mb-2 mb-md-0 align-items-center d-flex">
+    <div class="col-12 col-md-6 mb-2 mb-md-0 align-items-center d-flex justify-content-around">
       <h1 class="text-center text-md-start title">Book App</h1>
+      <button type="button" class="btn btn-primary" routerLink="/auth">Sign Up</button>
     </div>
   </div>
 </div>
