--- a/src/app/components/book-list-component/book-list.component.css
+++ b/src/app/components/book-list-component/book-list.component.css
@@ -2,15 +2,13 @@
   padding: 16px;
   text-align: center;
   margin: 1%;
+  display: flex;
+  align-items: center;
 }
-img {
-  height: 50vh;
-  border-radius: 0.5em;
-}
-a{
+.btn-color{
   background-color: #7b006b;
   color: white;
 }
-a:hover{
+.btn-color:hover{
   background-color: #944d8a;
 }
