authentication & edit & delete

--- a/src/app/components/add-book/add-book.component.html
+++ b/src/app/components/add-book/add-book.component.html
@@ -110,7 +110,7 @@
     >
       Add
     </button>
-    <button type="button" class="btn btn-primary" [routerLink]="['/']">
+    <button type="button" class="btn btn-primary" [routerLink]="['/BookList']">
       Return to list of books
     </button>
   </div>
