--- a/src/app/components/book-detail-component/book-detail.component.html
+++ b/src/app/components/book-detail-component/book-detail.component.html
@@ -2,7 +2,8 @@
   @if(book){
   <div class="card flex-row">
     <img
-      class="card-img-left example-card-img-responsive" alt="cover image"
+      class="card-img-left example-card-img-responsive"
+      alt="cover image"
       [src]="book.coverImage | slice : 12"
     />
     <div class="card-body">
