--- a/src/app/components/auth/auth.component.html
+++ b/src/app/components/auth/auth.component.html
@@ -1,5 +1,5 @@
-<div class="row">
-  <div class="col-xs-12 col-md-6 col-md-offset-3">
+<div class="w-100 d-flex justify-content-center mt-5">
+  <div class="col-xs-12 col-md-6 col-md-offset-3 w-50">
     @if(isLoading){
     <app-loading-spinner></app-loading-spinner>
     } @else{
@@ -31,16 +31,22 @@
           minlength="6"
         />
       </div>
-      <button
-        type="submit"
-        class="btn btn-primary"
-        [disabled]="!authForm.valid"
-      >
-        {{ isLoginMode ? "Login" : "SignUp" }}
-      </button>
-      <button type="button" class="btn btn-primary" (click)="onSwitchMode()">
+      <div class="d-flex justify-content-between">
+        <button
+          type="submit"
+          class="btn btn-primary"
+          [disabled]="!authForm.valid"
+        >
+          {{ isLoginMode ? "Log In" : "Sign Up" }}
+        </button>
+        <!-- <button type="button" class="btn btn-primary" (click)="onSwitchMode()">
         Switch to {{ isLoginMode ? "SignUp" : "Login" }}
-      </button>
+      </button> -->
+        <p>
+          {{ isLoginMode ? "Not a member?" : "Already have an account?" }}
+          <a (click)="onSwitchMode()" class="text-primary pe-auto">{{ isLoginMode ? "Register" : "Log In" }}</a>
+        </p>
+      </div>
     </form>
     }
   </div>
