--- a/src/app/components/book-detail-component/book-detail.component.html
+++ b/src/app/components/book-detail-component/book-detail.component.html
@@ -1,33 +1,38 @@
-<app-card>
-  @if(book){
-  <div class="card flex-row">
-    <img
-      class="card-img-left example-card-img-responsive"
-      alt="cover image"
-      [src]="book.coverImage | slice : 12"
-    />
-    <div class="card-body">
-      <h2 class="card-title h2">{{ book.title }}</h2>
+@if(book){
+<div class="container py-5">
+  <div class="row">
+    <div class="col-md-6 mb-4">
+      <div class="card">
+        <img
+          [src]="book.coverImage | slice : 12"
+          class="card-img-top"
+          alt="Book Image"
+        />
+      </div>
+    </div>
+    <!-- Book Details -->
+    <div class="col-md-6">
+      <h1 class="h2 mb-3">{{ book.title | uppercase }}</h1>
       <span>By {{ book.author }}</span>
-      <ul type="none" class="mt-5">
-        <li class="m-2">Description : {{ book.description }}</li>
-        <li class="m-2">Author : {{ book.author }}</li>
-        <li class="m-2">Publication Year : {{ book.publicationYear }}</li>
-        <li class="m-2">Genre : {{ book.genre }}</li>
-        <div class="d-flex flex-column">
-          <button
-            type="button"
-            class="btn btn-primary m-3"
-            [routerLink]="['/editBook/', id]"
-          >
-            Edit
-          </button>
-          <button type="button" class="btn btn-primary" [routerLink]="['/']">
-            Return to list of books
-          </button>
-        </div>
-      </ul>
+      <div class="mb-3">
+        <ul type="none">
+          <li class="m-2">Description : {{ book.description }}</li>
+          <li class="m-2">Author : {{ book.author }}</li>
+          <li class="m-2">Publication Year : {{ book.publicationYear }}</li>
+          <li class="m-2">Genre : {{ book.genre }}</li>
+        </ul>
+      </div>
+
+      <div class="d-grid gap-2">
+        <button
+          class="btn btn-primary"
+          type="button"
+          [routerLink]="['/editBook/', id]"
+        >
+          Edit
+        </button>
+      </div>
     </div>
   </div>
-  }
-</app-card>
+</div>
+}
