--- a/src/app/components/edit-book/edit-book.component.html
+++ b/src/app/components/edit-book/edit-book.component.html
@@ -1,80 +1,147 @@
-<form (ngSubmit)="onEdit()" [formGroup]="bookForm">
-  <div class="form-row">
-    <div class="form-group col-md-6">
-      <label for="title">Title</label>
-      <input
-        type="text"
-        class="form-control"
-        id="title"
-        placeholder="Title"
-        name="title"
-        formControlName="title"
-      />
-      @if(!bookForm.get('title')?.valid && bookForm.get('title')?.touched){
-        <span class="help-block">Please enter a title</span>
-        }
+<div class="container">
+  <div class="text-center mt-5">
+    <h1>Edit Book Form</h1>
+  </div>
+
+  <div class="row">
+    <div class="col-lg-7 mx-auto">
+      <div class="card mt-2 mx-auto p-4 bg-light">
+        <div class="card-body bg-light">
+          <div class="container">
+            <form
+              id="contact-form"
+              role="form"
+              (ngSubmit)="onEdit()"
+              [formGroup]="bookForm"
+            >
+              <div class="controls">
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <label for="title">Title *</label>
+                      <input
+                        id="Title"
+                        type="text"
+                        class="form-control"
+                        name="title"
+                        required
+                        formControlName="title"
+                      />
+                      @if(!bookForm.get('title')?.valid &&
+                      bookForm.get('title')?.touched){
+                      <span class="help-block">Please enter a title</span>
+                      }
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <label for="author">Author *</label>
+                      <input
+                        id="author"
+                        type="text"
+                        name="author"
+                        class="form-control"
+                        required
+                        formControlName="author"
+                      />
+                      @if(!bookForm.get('author')?.valid &&
+                      bookForm.get('author')?.touched){
+                      <span class="help-block">Please enter a author</span>
+                      }
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="row">
+                    <div class="col-md-6">
+                      <div class="form-group">
+                        <label for="publicationYear">Publication year *</label>
+                        <input
+                          type="number"
+                          min="1900"
+                          max="2025"
+                          class="form-control"
+                          id="publicationYear"
+                          placeholder="Enter year"
+                          name="publicationYear"
+                          required
+                          formControlName="publicationYear"
+                        />
+                        @if(!bookForm.get('publicationYear')?.valid &&
+                        bookForm.get('publicationYear')?.touched){
+                        <span class="help-block"
+                          >Please enter a valid publication year</span
+                        >
+                        }
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <label for="genre">Please specify genre *</label>
+                      <select
+                        id="genre"
+                        name="genre"
+                        class="form-control"
+                        multiple
+                        required
+                        formControlName="genre"
+                      >
+                        <option value="" selected disabled>
+                          --Select Genre--
+                        </option>
+                        <option value="Fiction">Fiction</option>
+                        <option value="Classic">Classic</option>
+                        <option value="Romance">Romance</option>
+                        <option value="Adventure">Adventure</option>
+                        <option value="Fantasy">Fantasy</option>
+                      </select>
+                      @if(!bookForm.get('genre')?.valid &&
+                      bookForm.get('genre')?.touched){
+                      <span class="help-block">Please select genre</span>
+                      }
+                    </div>
+                  </div>
+                </div>
+
+                <div class="row">
+                  <div class="col-md-12">
+                    <div class="form-group">
+                      <label for="description">Description *</label>
+                      <textarea
+                        class="form-control"
+                        rows="4"
+                        id="description"
+                        name="description"
+                        required
+                        formControlName="description"
+                      ></textarea>
+                      @if(!bookForm.get('description')?.valid &&
+                      bookForm.get('description')?.touched){
+                      <span class="help-block">Please enter a desription</span>
+                      }
+                    </div>
+                  </div>
+                  <div class="col-md-12 d-flex justify-content-between mt-2">
+                    <input
+                      type="submit"
+                      class="btn btn-success btn-send pt-2 btn-block"
+                      value="Save"
+                      [disabled]="!bookForm.valid"
+                    />
+                    <input
+                      type="submit"
+                      class="btn btn-primary btn-send pt-2 btn-block"
+                      value="Return to home"
+                      [routerLink]="['/BookList']"
+                    />
+                  </div>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="form-group col-md-6">
-      <label for="author">Author</label>
-      <input
-        type="text"
-        class="form-control"
-        id="author"
-        placeholder="Author"
-        name="author"
-        formControlName="author"
-      />
-      @if(!bookForm.get('author')?.valid && bookForm.get('author')?.touched){
-      <span class="help-block">Please enter a author</span>
-      }
-    </div>
   </div>
-  <div class="form-group">
-    <label for="publicationYear">Publication year</label>
-    <input
-      type="number"
-      min="1900"
-      max="2025"
-      class="form-control"
-      id="publicationYear"
-      placeholder="1976"
-      name="publicationYear"
-      formControlName="publicationYear"
-    />
-    @if(!bookForm.get('publicationYear')?.valid && bookForm.get('publicationYear')?.touched){
-    <span class="help-block">Please enter a valid publication year</span>
-    }
-  </div>
-  <div class="form-group">
-    <select
-      class="custom-select"
-      name="genre"
-      formControlName="genre"
-      multiple
-    >
-      <option value="">Select Genre:</option>
-      <option value="Fiction">Fiction</option>
-      <option value="Classic">Classic</option>
-      <option value="Romance">Romance</option>
-      <option value="Adventure">Adventure</option>
-      <option value="Fantasy">Fantasy</option>
-    </select>
-    @if(!bookForm.get('genre')?.valid && bookForm.get('genre')?.touched){
-      <span class="help-block">Please select genre</span>
-      }
-  </div>
-  <div class="form-group">
-    <label for="description">Description</label>
-    <textarea
-      class="form-control"
-      id="description"
-      rows="3"
-      name="description"
-      formControlName="description"
-    ></textarea>
-    @if(!bookForm.get('description')?.valid && bookForm.get('description')?.touched){
-    <span class="help-block">Please enter a desription</span>
-    }
-  </div>
-  <button [disabled]="!bookForm.valid" type="submit" class="btn btn-primary">Edit</button>
-</form>
+</div>
