--- a/src/app/components/edit-book/edit-book.component.html
+++ b/src/app/components/edit-book/edit-book.component.html
@@ -1,3 +1,4 @@
+<app-loading-spinner [isLoading]="isLoading">
 <div class="container">
   <div class="text-center mt-5">
     <h1>Edit Book Form</h1>
@@ -145,3 +146,4 @@
     </div>
   </div>
 </div>
+</app-loading-spinner>
