--- a/src/app/components/add-book/add-book.component.html
+++ b/src/app/components/add-book/add-book.component.html
@@ -1,165 +1,172 @@
-<div class="container">
-  <div class="text-center mt-5">
-    <h1>Add Book Form</h1>
-  </div>
+<app-loading-spinner [isLoading]="isLoading">
+  <div class="container">
+    <div class="text-center mt-5">
+      <h1>Add Book Form</h1>
+    </div>
 
-  <div class="row">
-    <div class="col-lg-7 mx-auto">
-      <div class="card mt-2 mx-auto p-4 bg-light">
-        <div class="card-body bg-light">
-          <div class="container">
-            <form
-              id="contact-form"
-              role="form"
-              (ngSubmit)="onSubmit(addBookForm)"
-              #addBookForm="ngForm"
-            >
-              <div class="controls">
-                <div class="row">
-                  <div class="col-md-6">
-                    <div class="form-group">
-                      <label for="title">Title *</label>
-                      <input
-                        id="Title"
-                        type="text"
-                        class="form-control"
-                        name="title"
-                        ngModel
-                        #title="ngModel"
-                        required
-                      />
-                      @if(!title.valid && title.touched){
-                      <span class="help-block">Please enter a title</span>
-                      }
-                    </div>
-                  </div>
-                  <div class="col-md-6">
-                    <div class="form-group">
-                      <label for="author">Author *</label>
-                      <input
-                        id="author"
-                        type="text"
-                        name="author"
-                        class="form-control"
-                        ngModel
-                        #author="ngModel"
-                        required
-                      />
-                      @if(!author.valid && author.touched){
-                      <span class="help-block">Please enter a author</span>
-                      }
-                    </div>
-                  </div>
-                </div>
-                <div class="row">
+    <div class="row">
+      <div class="col-lg-7 mx-auto">
+        <div class="card mt-2 mx-auto p-4 bg-light">
+          <div class="card-body bg-light">
+            <div class="container">
+              <form
+                id="contact-form"
+                role="form"
+                (ngSubmit)="onSubmit(addBookForm)"
+                #addBookForm="ngForm"
+              >
+                <div class="controls">
                   <div class="row">
                     <div class="col-md-6">
                       <div class="form-group">
-                        <label for="publicationYear">Publication year *</label>
+                        <label for="title">Title *</label>
                         <input
-                          type="number"
-                          min="1900"
-                          max="2025"
+                          id="Title"
+                          type="text"
                           class="form-control"
-                          id="publicationYear"
-                          placeholder="Enter year"
-                          name="publicationYear"
+                          name="title"
                           ngModel
-                          #publicationYear="ngModel"
+                          #title="ngModel"
                           required
                         />
-                        @if(!publicationYear.valid && publicationYear.touched){
+                        @if(!title.valid && title.touched){
+                        <span class="help-block">Please enter a title</span>
+                        }
+                      </div>
+                    </div>
+                    <div class="col-md-6">
+                      <div class="form-group">
+                        <label for="author">Author *</label>
+                        <input
+                          id="author"
+                          type="text"
+                          name="author"
+                          class="form-control"
+                          ngModel
+                          #author="ngModel"
+                          required
+                        />
+                        @if(!author.valid && author.touched){
+                        <span class="help-block">Please enter a author</span>
+                        }
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="row">
+                      <div class="col-md-6">
+                        <div class="form-group">
+                          <label for="publicationYear"
+                            >Publication year *</label
+                          >
+                          <input
+                            type="number"
+                            min="1900"
+                            max="2025"
+                            class="form-control"
+                            id="publicationYear"
+                            placeholder="Enter year"
+                            name="publicationYear"
+                            ngModel
+                            #publicationYear="ngModel"
+                            required
+                          />
+                          @if(!publicationYear.valid &&
+                          publicationYear.touched){
+                          <span class="help-block"
+                            >Please enter a valid publication year</span
+                          >
+                          }
+                        </div>
+                      </div>
+                      <div class="col-md-6">
+                        <div class="form-group">
+                          <label for="imgSrc">Choose Image *</label>
+                          <input
+                            type="file"
+                            class="custom-file-input"
+                            id="imgSrc"
+                            name="coverImage"
+                            accept="image/*"
+                            #coverImage="ngModel"
+                            ngModel
+                            required
+                          />
+                          @if(!coverImage.valid && coverImage.touched){
+                          <span class="help-block">Please select image</span>
+                          }
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-6">
+                      <div class="form-group">
+                        <label for="genre">Please specify genre *</label>
+                        <select
+                          id="genre"
+                          name="genre"
+                          class="form-control"
+                          ngModel
+                          #genre="ngModel"
+                          multiple
+                          required
+                        >
+                          <option value="" selected disabled>
+                            --Select Genre--
+                          </option>
+                          <option value="Fiction">Fiction</option>
+                          <option value="Classic">Classic</option>
+                          <option value="Romance">Romance</option>
+                          <option value="Adventure">Adventure</option>
+                          <option value="Fantasy">Fantasy</option>
+                        </select>
+                        @if(!genre.valid && genre.touched){
+                        <span class="help-block">Please select genre</span>
+                        }
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="row">
+                    <div class="col-md-12">
+                      <div class="form-group">
+                        <label for="description">Description *</label>
+                        <textarea
+                          class="form-control"
+                          rows="4"
+                          id="description"
+                          name="description"
+                          required
+                          #description="ngModel"
+                          ngModel
+                        ></textarea>
+                        @if(!description.valid && description.touched){
                         <span class="help-block"
-                          >Please enter a valid publication year</span
+                          >Please enter a desription</span
                         >
                         }
                       </div>
                     </div>
-                    <div class="col-md-6">
-                      <div class="form-group">
-                        <label for="imgSrc">Choose Image *</label>
-                        <input
-                          type="file"
-                          class="custom-file-input"
-                          id="imgSrc"
-                          name="coverImage"
-                          accept="image/*"
-                          #coverImage="ngModel"
-                          ngModel
-                          required
-                        />
-                        @if(!coverImage.valid && coverImage.touched){
-                        <span class="help-block">Please select image</span>
-                        }
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-6">
-                    <div class="form-group">
-                      <label for="genre">Please specify genre *</label>
-                      <select
-                        id="genre"
-                        name="genre"
-                        class="form-control"
-                        ngModel
-                        #genre="ngModel"
-                        multiple
-                        required
-                      >
-                        <option value="" selected disabled>
-                          --Select Genre--
-                        </option>
-                        <option value="Fiction">Fiction</option>
-                        <option value="Classic">Classic</option>
-                        <option value="Romance">Romance</option>
-                        <option value="Adventure">Adventure</option>
-                        <option value="Fantasy">Fantasy</option>
-                      </select>
-                      @if(!genre.valid && genre.touched){
-                      <span class="help-block">Please select genre</span>
-                      }
+                    <div class="col-md-12 d-flex justify-content-between mt-2">
+                      <input
+                        type="submit"
+                        class="btn btn-success btn-send pt-2 btn-block"
+                        value="Add"
+                        [disabled]="addBookForm.invalid"
+                      />
+                      <input
+                        type="submit"
+                        class="btn btn-primary btn-send pt-2 btn-block"
+                        value="Return to home"
+                        [routerLink]="['/BookList']"
+                      />
                     </div>
                   </div>
                 </div>
-
-                <div class="row">
-                  <div class="col-md-12">
-                    <div class="form-group">
-                      <label for="description">Description *</label>
-                      <textarea
-                        class="form-control"
-                        rows="4"
-                        id="description"
-                        name="description"
-                        required
-                        #description="ngModel"
-                        ngModel
-                      ></textarea>
-                      @if(!description.valid && description.touched){
-                      <span class="help-block">Please enter a desription</span>
-                      }
-                    </div>
-                  </div>
-                  <div class="col-md-12 d-flex justify-content-between mt-2">
-                    <input
-                      type="submit"
-                      class="btn btn-success btn-send pt-2 btn-block"
-                      value="Add"
-                      [disabled]="addBookForm.invalid"
-                    />
-                    <input
-                      type="submit"
-                      class="btn btn-primary btn-send pt-2 btn-block"
-                      value="Return to home"
-                      [routerLink]="['/BookList']"
-                    />
-                  </div>
-                </div>
-              </div>
-            </form>
+              </form>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-</div>
+</app-loading-spinner>
