--- a/src/app/components/auth/auth.component.html
+++ b/src/app/components/auth/auth.component.html
@@ -1,110 +1,58 @@
-<!-- <div class="w-100 d-flex justify-content-center mt-5">
-  <div class="col-xs-12 col-md-6 col-md-offset-3 w-50">
-    @if(isLoading){
-    <app-loading-spinner></app-loading-spinner>
-    } @else{
-    <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)">
-      <div class="form-group">
-        <label for="exampleInputEmail1">Email address</label>
-        <input
-          type="email"
-          class="form-control"
-          id="exampleInputEmail1"
-          aria-describedby="emailHelp"
-          placeholder="Enter email"
-          name="email"
-          ngModel
-          required
-          email
-        />
-      </div>
-      <div class="form-group">
-        <label for="exampleInputPassword1">Password</label>
-        <input
-          type="password"
-          class="form-control"
-          id="exampleInputPassword1"
-          placeholder="Password"
-          name="password"
-          ngModel
-          required
-          minlength="6"
-        />
-      </div>
-      <div class="d-flex justify-content-between">
-        <button
-          type="submit"
-          class="btn btn-primary"
-          [disabled]="!authForm.valid"
-        >
-          {{ isLoginMode ? "Log In" : "Sign Up" }}
-        </button>
-        <p>
-          {{ isLoginMode ? "Not a member?" : "Already have an account?" }}
-          <a (click)="onSwitchMode()" class="text-primary pe-auto">{{ isLoginMode ? "Register" : "Log In" }}</a>
-        </p>
-      </div>
-    </form>
-    }
-  </div>
-</div> -->
-@if(isLoading){
-<app-loading-spinner></app-loading-spinner>
-} @else{
-<div class="container">
-  <div class="row">
-    <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
-      <div class="card border-0 shadow rounded-3 my-5">
-        <div class="card-body p-4 p-sm-5">
-          <h5 class="card-title text-center mb-5 fw-light fs-5">
-            {{ isLoginMode ? "Sign In" : "Sign Up" }}
-          </h5>
-          <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)">
-            <div class="form-floating mb-3">
-              <input
-                type="email"
-                class="form-control"
-                id="floatingInput"
-                placeholder="name@example.com"
-                name="email"
-                ngModel
-                required
-                email
-              />
-              <label for="floatingInput">Email address</label>
-            </div>
-            <div class="form-floating mb-3">
-              <input
-                type="password"
-                class="form-control"
-                id="floatingPassword"
-                placeholder="Password"
-                name="password"
-                ngModel
-                required
-                minlength="6"
-              />
-              <label for="floatingPassword">Password</label>
-            </div>
-            <div class="d-grid">
-              <button
-                class="btn btn-primary btn-login text-uppercase fw-bold"
-                type="submit"
-                [disabled]="!authForm.valid"
-              >
-                {{ isLoginMode ? "Sign In" : "Sign Up" }}
-              </button>
-            </div>
-            <p>
-              {{ isLoginMode ? "Not a member?" : "Already have an account?" }}
-              <a (click)="onSwitchMode()" class="text-primary pe-auto">{{
-                isLoginMode ? "Sign Up" : "Sign In"
-              }}</a>
-            </p>
-          </form>
+<app-loading-spinner [isLoading]="isLoading">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+        <div class="card border-0 shadow rounded-3 my-5">
+          <div class="card-body p-4 p-sm-5">
+            <h5 class="card-title text-center mb-5 fw-light fs-5">
+              {{ isLoginMode ? "Sign In" : "Sign Up" }}
+            </h5>
+            <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)">
+              <div class="form-floating mb-3">
+                <input
+                  type="email"
+                  class="form-control"
+                  id="floatingInput"
+                  placeholder="name@example.com"
+                  name="email"
+                  ngModel
+                  required
+                  email
+                />
+                <label for="floatingInput">Email address</label>
+              </div>
+              <div class="form-floating mb-3">
+                <input
+                  type="password"
+                  class="form-control"
+                  id="floatingPassword"
+                  placeholder="Password"
+                  name="password"
+                  ngModel
+                  required
+                  minlength="6"
+                />
+                <label for="floatingPassword">Password</label>
+              </div>
+              <div class="d-grid">
+                <button
+                  class="btn btn-primary btn-login text-uppercase fw-bold"
+                  type="submit"
+                  [disabled]="!authForm.valid"
+                >
+                  {{ isLoginMode ? "Sign In" : "Sign Up" }}
+                </button>
+              </div>
+              <p>
+                {{ isLoginMode ? "Not a member?" : "Already have an account?" }}
+                <a (click)="onSwitchMode()" class="text-primary pe-auto">{{
+                  isLoginMode ? "Sign Up" : "Sign In"
+                }}</a>
+              </p>
+            </form>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
-}
+</app-loading-spinner>
