--- a/src/app/components/shared/loading-spinner/loading-spinner.component.html
+++ b/src/app/components/shared/loading-spinner/loading-spinner.component.html
@@ -1,1 +1,7 @@
-<div class="lds-ripple"><div></div><div></div></div>
+<div class="spinner-overlay" *ngIf="isLoading">
+   
+  <div class="spinner-border text-primary" role="status">
+        <span class="visually-hidden">Loading...</span>  
+  </div>
+</div>
+<ng-content></ng-content>
