--- a/src/app/components/edit-book/edit-book.component.html
+++ b/src/app/components/edit-book/edit-book.component.html
@@ -21,7 +21,7 @@
                     <div class="form-group">
                       <label for="title">Title *</label>
                       <input
-                        id="Title"
+                        id="title"
                         type="text"
                         class="form-control"
                         name="title"
